Uploading, image access and more.

--- a/views/imports/navbar.ejs
+++ b/views/imports/navbar.ejs
@@ -1,5 +1,6 @@
 <header>
 	<a href="/"><%- name %></a>
+	<a href="/upload">Upload</a>
 	<div class="right-navbar">
 		<% if(!loggedIn) { %>
 			<a href="/user/register">Register</a>
