--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -6,8 +6,9 @@
 		<%- include('imports/navbar'); %>
 
 		<main>
-			<img src='<%- source %>'>
-			<p><%- tags %></p>
+			<h1>Upload an image</h1>
+
+			<%- include('forms/upload.ejs') %>
 		</main>
 	</body>
 </html>
