--- a/views/imports/navbar.ejs
+++ b/views/imports/navbar.ejs
@@ -1,6 +1,10 @@
 <header>
 	<a href="/"><%- name %></a>
-	<a href="/upload">Upload</a>
+
+	<% if(anonup || loggedIn) { %>
+		<a href="/upload"><i class="fa fa-upload" aria-hidden="true"></i></a>
+	<% } %>
+
 	<div class="right-navbar">
 		<% if(!loggedIn) { %>
 			<a href="/user/register">Register</a>
