--- a/views/imports/navbar.ejs
+++ b/views/imports/navbar.ejs
@@ -5,6 +5,13 @@
 		<a href="/upload"><i class="fa fa-upload" aria-hidden="true"></i></a>
 	<% } %>
 
+	<form action="/images/search" class="navbar-search">
+		<input type="text" name="tags" value="<%- searchTags %>">
+		<button type="submit" value="">
+			<i class="fa fa-search" aria-hidden="true"></i>
+		</button>
+	</form>
+
 	<div class="right-navbar">
 		<% if(!loggedIn) { %>
 			<a href="/user/register">Register</a>
