--- a/web/files/css/style.css
+++ b/web/files/css/style.css
@@ -20,9 +20,10 @@ header {
 	height: 35px;
 	top: 0;
 	line-height: 35px;
+	display: inline-flex;
 }
 
-header a {
+header a, header .navbar-search input {
 	display: inline-block;
 	color: white;
 	font-family: Arial;
@@ -44,9 +45,53 @@ header a:active {
 }
 
 header .right-navbar {
-	float: right;
+	margin-left: auto;
+}
+
+header .navbar-search {
+	display: inline-flex;
+	margin-left: 10px;
+}
+
+header .navbar-search input[type="text"]:focus {
+	outline: 0;
+}
+
+header .navbar-search input[type="text"] {
+	background-color: #303F9F;
+	box-sizing: border-box;
+	border: 0;
+	padding: 0 8px;
+	border-radius: none;
+}
+
+header .navbar-search button:focus { outline:0; }
+
+header .navbar-search button:hover {
+	background-color: #3949AB;
+}
+
+header .navbar-search button { 
+	background: none;
+	background-color: #303F9F;
+	color: white;
+    border: 0;
+    margin: 0;
+    cursor: pointer; 
+    font-size: 18px;
+    transition: background-color .2s;
 }
 
 main {
 	margin: 50px 10px 10px 10px;
+}
+
+.image_card {
+	width: 300px;
+	padding: 5px;
+	background-color: #303F9F;
+}
+
+.image_card img {
+	max-width: 100%;
 }
