--- a/web/files/css/style.css
+++ b/web/files/css/style.css
@@ -95,3 +95,23 @@ main {
 .image_card img {
 	max-width: 100%;
 }
+
+.pages-container {
+	display: inline-flex;
+}
+
+.pages-container a.selected {
+	background-color: #1A237E;
+}
+
+.pages-container a {
+	width: 30px;
+	height: 30px;
+	background-color: #303F9F;
+	color: white;
+	text-align: center;
+	font-family: Arial;
+	font-size: 20px;
+	line-height: 30px;
+	text-decoration: none;
+}
