New homepage, better CSS, better database connections handling, some other tweaks.

--- a/views/imports/navbar.ejs
+++ b/views/imports/navbar.ejs
@@ -6,8 +6,8 @@
 	<% } %>
 
 	<form action="/images/search" class="navbar-search">
-		<input type="text" name="tags" value="<%- searchTags %>">
-		<button type="submit" value="">
+		<input type="text" name="tags" class="search-input" value="<%- searchTags %>">
+		<button type="submit" value="" class="search-button">
 			<i class="fa fa-search" aria-hidden="true"></i>
 		</button>
 	</form>
