--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,25 @@
 	<%- include('imports/header'); %>
 
 	<body>
-		<%- include('imports/navbar'); %>
+
+		<h1 class="index-title"><%- title %></h1>
+
+		<div class="index-page">
+			<form class="search-form" action="/images/search">
+				<input type="text" name="tags" class="search-input" />
+				<button value="" class="search-button">
+					<i class="fa fa-search" aria-hidden="true"></i>
+				</button>
+			</form>
+			
+			<div class="links-area">
+				<a href="/images/">Gallery</a>
+				<a href="/tags/">Tags</a>
+				<a href="/upload/">Upload</a>
+				<a href="/about/">About us</a>
+				<a href="/contact/">Contact</a>
+			</div>
+		</div>
+		
 	</body>
 </html>
