--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,7 +8,9 @@
 		<main>
 			<h1>Upload an image</h1>
 
-			<%- include('forms/upload.ejs') %>
+			<div class="upload-area">
+				<%- include('forms/upload.ejs') %>
+			</div>
 		</main>
 	</body>
 </html>
