--- a/views/view.ejs
+++ b/views/view.ejs
@@ -6,7 +6,9 @@
 		<%- include('imports/navbar'); %>
 
 		<main>
-			<img src='<%- source %>'>
+			<div class="image-container">
+				<img class="view-image" src='<%- source %>'>
+			</div>
 			<p><%- tags %></p>
 		</main>
 	</body>
