--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,9 @@
 				<a href="/images/">Gallery</a>
 				<a href="/tags/">Tags</a>
 				<a href="/upload/">Upload</a>
-				<a href="/about/">About us</a>
+				<a href="/about/">About</a>
 				<a href="/contact/">Contact</a>
+				<a href="/rules/">Rules</a>
 			</div>
 		</div>
 		
