Fixed search with empty results, started on about and contact.

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -7,9 +7,11 @@
 
 		<main>
 			<div class="images-gallery">
-				<% for(var img in images) { %>
-					<%  img_id = images[img]._id %>
-					<%- include('imports/image_card'); %>
+				<% if(images.length > 0){ %>
+					<% for(var img in images) { %>
+						<%  img_id = images[img]._id %>
+						<%- include('imports/image_card'); %>
+					<% } %>
 				<% } %>
 			</div>
 
