--- a/views/forms/upload.ejs
+++ b/views/forms/upload.ejs
@@ -9,7 +9,7 @@
 	<label for="rating">Rating: </label><br />
 	<select id="rating" name="rating">
 		<option value="safe">Safe</option>
-		<option value="questionnable">Questionnable</option>
+		<option value="questionable">Questionable</option>
 		<option value="explicit">Explicit</option>
 	</select>
 	<input type="submit" value="Upload">
