--- a/web/files/css/style.css
+++ b/web/files/css/style.css
@@ -229,68 +229,64 @@ main h1 {
 	margin-top: -100px;
 }
 
-.view-main{
-	width: 100%
+.view-main {
+	display: inline-flex;
+	width: 100%;
 }
 
 .image-container {
-	position: absolute;
-	padding: 5px;
 	margin-left: 10px;
-	right: 95%;
-	left: 25%;
-	width: 70%;
-	min-height: 100%;
 }
 
-.view-image {
-	margin: auto;
-	display: block;
-	float: center;
-	max-width: 100%;
+.image-container img {
+	width: 100%;
 }
 
 .tags-container {
-	text-align: center;
-	position: absolute;
-	left: 5px;
-	right: 75%;
-	width: 25%;
+	width: 500px;
+	display: inline-flex;
+	flex-direction: column;
 	background-color: #3F51B5;
-	min-height: 90%;
 }
 
-.tags-container h3{
+.tags-container h3 {
 	color: white;
+	margin: 5px;
+}
+
+.tags {
+	flex-grow: 1;
+	display: inline-flex;
+	flex-direction: column;
 }
 
 .tag-item {
+	margin: 10px 10px 0px 10px;
 	color: white;
 	transition: background-color .2s;
+	text-decoration: none;
 }
 
-.tag-item a:hover {
+.tag-item:hover {
 	background-color: #5C6BC0;
 }
 
-.tag-item a:active {
+.tag-item:active {
 	background-color: #3949AB;
 }
 
-.tag-item a {
-	display: inline-block;
-	color: white;
-	background-color: #3F51B5;
-	transition: background-color .2s;
-	text-decoration: none;
-	margin: 0;
+.uploader-info {
+	margin: 0 0 5px 5px;
 }
 
-.uploader-info {
-	text-align: center;
+.uploader-info span {
 	color: white;
-	position: absolute;
-	bottom: 0;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+.uploader-info p {
+	color: white;
 	width: 100%;
 }
 
@@ -303,10 +299,8 @@ main h1 {
 }
 
 .uploader-info a {
-	display: inline-block;
 	color: white;
 	background-color: #3F51B5;
 	transition: background-color .2s;
 	text-decoration: none;
-	margin: 0;
 }
