--- a/views/view.ejs
+++ b/views/view.ejs
@@ -12,13 +12,19 @@
 
 					<div class="tags">
 						<% tags.forEach(function(tag) { %>
-							<a class="tag-item" href='/images/search?tags=<%- tag %>'> <%- tag %> </a>
+							<a class="tag-item" href='/images/search?tags=<%- tag %>'><i class="fa fa-tag" aria-hidden="true"></i> <%- tag %> </a>
+						<%	}) %>
+
+						<% artists.forEach(function(artist) { %>
+							<a class="tag-item" href='/images/search?tags=artist:<%- artist %>'><i class="fa fa-paint-brush" aria-hidden="true"></i> <%- artist %> </a>
 						<%	}) %>
 					</div>
 
+
+
 					<div class="uploader-info">
 						<p><span>Uploader: </span><a href='/images/search?tags=uploader:<%- uploader %>'> <%- uploader %> </a></p>
-						<!--<p><span>Uploaded: </span><%- uploaded %></p>-->
+						<p><span>Uploaded: </span><%- uploaded %></p>
 						<p><span>Rating: </span><a href='/images/search?tags=rating:<%- rating[0] %>'> <%- rating[0] %> </a></p>
 						<p><span>Source: </span><a href='<%- src %>'> <%- src %> </a></p>
 					</div>
