Fixed pages counting, default limit is now 30, added a css grid to the gallery.

--- a/views/imports/image_card.ejs
+++ b/views/imports/image_card.ejs
@@ -1,5 +1,5 @@
 <div class="image_card">
-	<a href="/images/view/<%- img_id %>">
+	<a href="/images/view/<%- img_id + (searchTags.length > 0 ? "?s=" + searchTags : "")%>">
 		<img src="/imgs/<%- img_id %>">
 	</a>
 </div>
