Made custom pages less dumb.

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 		<%- include('imports/navbar'); %>
 
 		<main>
-			<%- include('custom/about'); %>
+			<%- include('custom/contact'); %>
 		</main>
 	</body>
 </html>
