Started on permissions.

--- a/views/forms/user.ejs
+++ b/views/forms/user.ejs
@@ -1,2 +1,3 @@
-<p>Account created on : <%- creationDate %></p>
-<p>Email used : <%- creationEmail %></p>
+<p>Account created on: <%- creationDate %></p>
+<p>Email used: <%- creationEmail %></p>
+<p>Class: <%- userClass %></p>
